# pyslash

./: README.md  requirements.txt  setup.cfg  setup.py
pyslash/cmd/: slash.py
pyslash/cmd/tests/: test_slash.py
