[metadata]
name = pyslash
version = 0.0.1
description = Python Script for Libvirt Acceleration SHortcut
author = momijiame
author_email = amedama.ginmokusei@gmail.com
url = https://github.com/momijiame/pyslash
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: Javanese
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[entry_points]
console_scripts =
    slash = pyslash.cmd.slash:main
